--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ nav:
   - People: people.md
   - Research & PhD Projects: research.md
   - Seminar: seminar.md
-  - Reading group: reading_group.md
+  - Reading Group: reading_group.md
   # - Join us: vacancies.md
   # - Home: 
   #   - index.md
