--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,9 @@ nav:
   - Home: index.md
   - People: people.md
   #- Research & PhD Projects: research.md
-  - Seminar: seminar.md
+  - Seminars: seminar.md
   - Reading Group: reading_group.md
+  - Pictures: pictures.md
   # - Join us: vacancies.md
   # - Home: 
   #   - index.md
