calendar page added

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   #- Research & PhD Projects: research.md
   - Seminars: seminar.md
   - Reading Group: reading_group.md
+  - Calendar: calendar.md
   - Pictures: pictures.md
   # - Join us: vacancies.md
   # - Home: 
