--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,8 @@ nav:
   - Seminars: seminar.md
   - Reading Group: reading_group.md
   - Calendar: calendar.md
-  - Pictures: pictures.md
+  - Venues: venues.md
+  # - Pictures: pictures.md
   # - Join us: vacancies.md
   # - Home: 
   #   - index.md
