--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ nav:
   - Reading Group: reading_group.md
   - Calendar: calendar.md
   - Venues: venues.md
-  - Pictures: pictures1.md
+  - Pictures: pictures.md
   # - Join us: vacancies.md
   # - Home: 
   #   - index.md
